Dyntopo Constant Detail freezes Blender on scaled object #59152

Closed
opened 2018-12-11 00:32:18 +01:00 by Steve Warner · 5 comments

System Information
Operating system: Windows 10
Graphics card: GeForce 1080

Blender Version
Broken:
2.8 Beta
2018-12-09 20:51
Hash: 168a6a4bfc

Short description of error

Load the attached file. Go to Sculpt mode. Set Dyntopo to Constant detail. Click on the mesh. Blender will lock up.

To resolve, load the file, go to Object mode and freeze all transforms. Then go to Sculpt mode, set the detail to Constant detail and click on the mesh. Blender will not lock up.

Hood.blend

**System Information** Operating system: Windows 10 Graphics card: GeForce 1080 **Blender Version** Broken: 2.8 Beta 2018-12-09 20:51 Hash: 168a6a4bfc1 **Short description of error** Load the attached file. Go to Sculpt mode. Set Dyntopo to Constant detail. Click on the mesh. Blender will lock up. To resolve, load the file, go to Object mode and freeze all transforms. Then go to Sculpt mode, set the detail to Constant detail and click on the mesh. Blender will not lock up. [Hood.blend](https://archive.blender.org/developer/F5915030/Hood.blend)
Author

Added subscriber: @stevewarner

Added subscriber: @stevewarner

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

@brecht how to assign this to?

@brecht how to assign this to?

This issue was referenced by 22bc6142c3

This issue was referenced by 22bc6142c3c505de2f2a9a85941c43236f53b941

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59152
No description provided.