Fix T59152: dynamic topology constant detail should be in world space.

It seems more predictable, and makes more sense for future multi-object modes.